--- a/.github/workflows/git-pr-release.yml
+++ b/.github/workflows/git-pr-release.yml
@@ -1,29 +1,25 @@
-name: Create Release Pull Request
+name: CreateReleasePR
+
 on:
   push:
-    branches: [develop]
-
-permissions:
-  pull-requests: write
-  contents: write
-
+    branches:
+      - develop
 jobs:
-  release-pull-request:
-    permissions:
-      pull-requests: write
+  createReleasePR:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: ruby/setup-ruby@v1
+      - uses: actions/checkout@v1
+      - name: Set up Ruby 3.1
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.1
-      - run: gem install --no-document git-pr-release
-      - run: git-pr-release
+      - name: Execute git-pr-release
         env:
-          GIT_PR_RELEASE_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GIT_PR_RELEASE_BRANCH_PRODUCTION: main
           GIT_PR_RELEASE_BRANCH_STAGING: develop
-          GIT_PR_RELEASE_LABELS: release
-          GIT_PR_RELEASE_TEMPLATE: .github/git-pr-release.erb
-          TZ: Asia/Tokyo
+          GIT_PR_RELEASE_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GIT_PR_RELEASE_TEMPLATE: '.github/.git-pr-template.erb'
+        run: |
+          gem install git-pr-release -v "0.6.0"
+          git remote set-url origin "https://${GITHUB_ACTOR}:${GIT_PR_RELEASE_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
+          git-pr-release || echo "Done."
