--- a/.github/workflows/git-release-staging-release.yml
+++ b/.github/workflows/git-release-staging-release.yml
@@ -1,4 +1,4 @@
-name: Create Release Pull Request
+name: Create Release Develop to Main Pull Request
 on:
   push:
     branches: [develop]
@@ -17,8 +17,8 @@ jobs:
       - run: git-pr-release
         env:
           GIT_PR_RELEASE_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GIT_PR_RELEASE_BRANCH_PRODUCTION: main
+          GIT_PR_RELEASE_BRANCH_PRODUCTION: staging
           GIT_PR_RELEASE_BRANCH_STAGING: develop
           GIT_PR_RELEASE_LABELS: release
-          GIT_PR_RELEASE_TEMPLATE: .github/git-pr-template.erb
+          GIT_PR_RELEASE_TEMPLATE: .github/git-release-staging-release.erb
           TZ: Asia/Tokyo
