--- a/.github/workflows/git-release-main-release.yml
+++ b/.github/workflows/git-release-main-release.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   release-pull-request:
     permissions:
-      pull-requests: write
+      pull-requests: write # git > setting > actions > general > 「Read and write permissions」の設定があれば不要
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
